--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
+    "socket.io-client": "^2.3.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   }
